test.txt
  File "/home/ruslan/xrayvpn/xrayvpn.sh", line 109
    xray) tail -f "$RUN_DIR/xray.log" ;;
        ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '{' on line 106

